<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/coordinator_layout" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:background="@drawable/roundednotification" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <LinearLayout android:orientation="vertical" android:background="@drawable/notificationbackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/setup_title_id" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/view_vzw_account" android:lineSpacingExtra="8.0sp" />
            <View android:id="@id/divider" android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="14.0sp" android:gravity="top" android:layout_gravity="bottom" android:id="@id/setup_subtitle_id" android:background="@drawable/notificationbackground" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/pco_contact_customer_care" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout android:background="@drawable/roundednotification" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <LinearLayout android:orientation="vertical" android:background="@drawable/notificationbackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <View android:id="@id/divider" android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/btn_area" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="2.0dip">
                <Button android:id="@id/activate_now_btn" android:padding="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/pco_activate_now" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>